# mlops_hw

mpops/: .env  .flake8  .gitignore  .pre-commit-config.yaml  README.md  crush_script.py  data_list.py  docker-compose.yml  main.py  mypy.ini  params.yml  pyproject.toml  requirements.txt  run_pipeline.sh  setup.cfg  utils.py
mpops/bash_scripts/: download.sh  process.sh  train.sh  upload.sh  upload_processed.sh
mpops/data/processed/: processed.csv
mpops/lr3/: data_download.py  data_preprocessing.py  data_upload.py  run_pipeline.sh
mpops/lr3/bash_scripts/: download.sh  process.sh  upload.sh  upload_processed.sh
mpops/ml_ops/: data_download.py  data_preprocessing.py  data_upload.py
mpops/ml_ops/modeling/: train.py
mpops/models/: SVC_0.01296327410217345_rbf_11.748830023514097.joblib  SVC_0.07140265310002747_rbf_3.5687490223014158.joblib  SVC_0.13054433872120685_rbf_2.537134588821546.joblib  SVC_0.5559399161330288_rbf_0.0807401451135534.joblib
mpops/references/: main.py
mpops/reports/: classification_report.json
