[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ml_ops"
version = "0.0.1"
description = "A short description of the project.а"
authors = [
   "Eva_Sasha",
]
license = "MIT"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]

[tool.poetry.dependencies]
python = "~=3.12"
awscli = "*"
black = "*"
flake8 = "*"
ipython = "*"
isort = "*"
jupyterlab = "*"
loguru = "*"
matplotlib = "*"
mkdocs = "*"
mypy = "*"
notebook = "*"
numpy = "*"
pandas = "*"
pre-commit = "*"
python-dotenv = "*"
scikit-learn = "*"
tqdm = "*"
typer = "*"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["ml_ops"]
force_sort_within_sections = true