[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ml_ops"
version = "0.0.1"
description = "A short description of the project.а"
authors = [
   "Eva_Sasha",
]
license = "MIT"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]

[tool.poetry.dependencies]
python = "~=3.12"
awscli = "*"
black = "*"
ipython = "*"
isort = "*"
jupyterlab = "*"
loguru = "*"
matplotlib = "*"
mkdocs = "*"
notebook = "*"
numpy = "*"
pandas = "*"
python-dotenv = "*"
scikit-learn = "*"
tqdm = "*"
typer = "*"
boto3 = "^1.35.54"
flake8 = "^7.1.1"
mypy = "^1.13.0"
pre-commit = "^4.0.1"
types-boto3 = "^1.0.2"
mlflow = "^2.18.0"
omegaconf = "^2.3.0"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["ml_ops"]
force_sort_within_sections = true